Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38971

QtActivity did not call through to super.onConfigurationChanged() on orientation change (crash)

XMLWordPrintable

    • Android
    • 5fd6704091 (qt/qtbase/dev) a5cfa0b51b (qt/qtbase/6.3) 5fd6704091 (qt/tqtc-qtbase/dev) a5cfa0b51b (qt/tqtc-qtbase/6.3) 04ec9c5593 (qt/tqtc-qtbase/5.15)
    • 2020wk50, 2022wk04FOAndroid&Automotive, 2022wk06FOAndroid&Automotive, 2022wk08FOAndroid&Automotive, 2022wk10FOAndroid&Automotive, 2022wk12FOAndroid&Automotive, 2022wk14FOAndroid&Automotive, 2022wk16FOAndroid&Automotive

      I am seeing quite a few crash reports when screen orientation is changed:

      android.util.SuperNotCalledException: Activity org.qtproject.qt5.android.bindings.QtActivity did not call through to super.onConfigurationChanged()
      	at android.app.ActivityThread.performConfigurationChanged(ActivityThread.java:4490)
      	at android.app.ActivityThread.handleConfigurationChanged(ActivityThread.java:4703)
      	at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1478)
      	at android.os.Handler.dispatchMessage(Handler.java:102)
      	at android.os.Looper.loop(Looper.java:157)
      	at android.app.ActivityThread.main(ActivityThread.java:5872)
      	at java.lang.reflect.Method.invokeNative(Native Method)
      	at java.lang.reflect.Method.invoke(Method.java:515)
      	at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:1069)
      	at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:885)
      	at dalvik.system.NativeStart.main(Native Method)
      

      When QtApplication.invokeDelegate(newConfig).invoked is true, the super class is not called.

        1. diff_fix_QTBUG-38971
          16 kB
          Gabriel Calero
        2. diff_fix_QTBUG-38971
          15 kB
          Gabriel Calero
        3. Qt5123_superNotCalledException.JPG
          46 kB
          Adrian Gabureanu
        4. Qt512_switchingActivities.PNG
          32 kB
          Adrian Gabureanu
        5. Qt515_SuperNotCalledException.PNG
          91 kB
          Adrian Gabureanu
        6. Qt512_Qt515_ActivityThread.zip
          9.77 MB
          Adrian Gabureanu
        7. qtbug38971.zip
          3 kB
          Tapio Oksa
        8. device-2021-11-26-205442.mp4
          9.33 MB
          Ramon Sadornil
        For Gerrit Dashboard: QTBUG-38971
        # Subject Branch Project Status CR V

            samuelmira Samuel Mira
            broulik Kai Uwe Broulik
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            8 Vote for this issue
            Watchers:
            19 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes